--- a/application/src/app/components/partials/login-form/login-form.component.css
+++ b/application/src/app/components/partials/login-form/login-form.component.css
@@ -1,4 +1,4 @@
-form {
+.login-form {
   max-width: 400px;
   margin: auto;
   padding: 2em;
@@ -9,14 +9,14 @@ form {
   gap: 2.5em;
 }
 
-label {
+.login-form > label {
   margin-bottom: .5em;
   color: #333333;
   display: block;
   font-size: 1.5em;
 }
 
-input {
+.login-form > div > input {
   border: 1px solid #ccc;
   padding: .5em;
   font-size: 1em;
@@ -25,7 +25,11 @@ input {
   box-sizing: border-box;
 }
 
-button {
+.login-form > div > .invalid-input {
+  border-color: red;
+}
+
+.login-form > button {
   padding: 0.7em;
   color: #fff;
   background-color: #007BFF;
@@ -36,15 +40,11 @@ button {
   width: 100%;
 }
 
-button:hover {
+.login-form > button:hover {
   background-color: #0056b3;
 }
 
-.invalid-input {
-  border-color: red;
-}
-
-.invalid-indicator {
+.login-form > div > .invalid-indicator {
   color: red;
   font-size: 0.8em;
   line-height: 0;
