--- a/application/src/app/components/partials/login-form/login-form.component.html
+++ b/application/src/app/components/partials/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
     <div>
       <label for="email">E-Mail</label>
       <input type="email" formControlName="email" placeholder="name@example.com"
