--- a/application/src/app/components/partials/header/header.component.html
+++ b/application/src/app/components/partials/header/header.component.html
@@ -1,4 +1,4 @@
 <div class='navbar'>
   <span>AngulaStocks</span>
-  <img src='../assets/icon.png' alt='Icône'>
+  <img src='../../../../assets/icon.png' alt='Icône'>
 </div>
