--- a/site/src/app/components/pages/login/login.component.css
+++ b/site/src/app/components/pages/login/login.component.css
@@ -1,8 +1,8 @@
 .login-page {
+  min-height: calc(100vh - 7.5vh);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 92.5vh;
 }
 
 .login-page > img {
