--- a/site/src/app/components/pages/home/home.component.css
+++ b/site/src/app/components/pages/home/home.component.css
@@ -1,6 +1,5 @@
 .home-page {
-  min-height: calc(100vh - 37.5vh);
+  height: calc(100vh - 12vh);
   display: flex;
   align-items: center;
-  padding: 1em;
 }
