--- a/site/src/app/components/partials/header/header.component.css
+++ b/site/src/app/components/partials/header/header.component.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   background-color: #0097B1;
   padding: 0 30px;
-  min-height: 7.5vh;
+  height: 12vh;
 }
 
 .navbar > span {
