--- a/site/src/app/components/partials/loaned-list/loaned-list.component.css
+++ b/site/src/app/components/partials/loaned-list/loaned-list.component.css
@@ -14,3 +14,19 @@
   text-align: left;
   background-color: #f2f2f2;
 }
+
+.button {
+  padding: 0.5em;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+}
+
+.red {
+  background-color: red;
+}
+
+.disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
