--- a/site/src/app/components/partials/account-form/account-form.component.css
+++ b/site/src/app/components/partials/account-form/account-form.component.css
@@ -41,7 +41,7 @@
 .logout-button {
   padding: 0.7em;
   color: #fff;
-  background-color: #FF0000;
+  background-color: red;
   border: none;
   border-radius: 5px;
   cursor: pointer;
