--- a/site/src/app/components/pages/loanable/list/list.component.css
+++ b/site/src/app/components/pages/loanable/list/list.component.css
@@ -1,6 +1,8 @@
 .list-page {
   min-height: calc(100vh - 12vh);
   display: flex;
+  flex-direction: column;
+  gap: 1em;
   align-items: center;
   justify-content: center;
 }
