--- a/site/src/app/components/pages/login/login.component.html
+++ b/site/src/app/components/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-page">
+<div class="page login-page">
   <img src="../../../../assets/upjv_icon.png" alt="Icône UPJV">
   <app-login-form></app-login-form>
 </div>
