--- a/site/src/app/components/pages/loanable/list/list.component.html
+++ b/site/src/app/components/pages/loanable/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="list-page">
+<div class="page list-page">
     <app-types-dropdown (typeSelected)="onTypeChange($event)"></app-types-dropdown>
     <app-loanable-list [selectedType]="selectedType"></app-loanable-list>    
 </div>
