--- a/site/src/app/components/partials/types-dropdown/types-dropdown.component.html
+++ b/site/src/app/components/partials/types-dropdown/types-dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="dropdown-container">
+<div class="dropdown container">
   <label for="typesDropdown">Type :</label>
   <select id="typesDropdown" class="dropdown" (change)="onTypeChange($any($event.target).value)">
     <option *ngFor="let type of types" [value]="type.name">
