--- a/site/src/app/components/partials/account-form/account-form.component.html
+++ b/site/src/app/components/partials/account-form/account-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()" class="account-form">
+<form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()" class="form account-form">
   <div>
     <label for="email">E-Mail</label>
     <input type="email" formControlName="email" [attr.disabled]="true"
