--- a/site/src/app/components/partials/loan-request-form/loan-request-form.component.html
+++ b/site/src/app/components/partials/loan-request-form/loan-request-form.component.html
@@ -1,15 +1,15 @@
 <form [formGroup]="loanRequestForm" (ngSubmit)="onSubmit()" class="form">
   <div>
     <label for="loanType">Type de l'emprunt</label>
-    <select formControlName="loanType" (change)="onLoanTypeChange($event.target.value)">
+    <select formControlName="loanType" (change)="onLoanTypeChange($any($event.target).value)">
       <option value="personnel">Personnel</option>
-      <option value="organisation">Pour une organisation</option>
+      <option value="organization">Pour une organisation</option>
     </select>
   </div>
-  <div *ngIf="isOrganisationSelected">
-    <label for="organisation">Organisation</label>
-    <select formControlName="organisation">
-      <option *ngFor="let organisation of organisations" [value]="organisation.id">{{ organisation.name }}</option>
+  <div *ngIf="isOrganizationSelected">
+    <label for="organization">Organisation</label>
+    <select formControlName="organization">
+      <option *ngFor="let organization of userOrganizations" [value]="organization.id">{{ organization.name }}</option>
     </select>
   </div>
   <button type="submit">Demander un emprunt</button>
