--- a/site/src/app/components/partials/loaned-list/loaned-list.component.html
+++ b/site/src/app/components/partials/loaned-list/loaned-list.component.html
@@ -14,29 +14,39 @@
   </thead>
   <tbody>
     <tr *ngFor="let loan of loans">
-      <td [ngClass]="{
-        'green': loan.state.name === 'LOANED',
-        'yellow': loan.state.name === 'REQUESTED' || loan.state.name === 'RETURN_REQUESTED',
-        'red': loan.state.name === 'REFUSED',
-        'grey': loan.state.name === 'RETURNED'
-      }">
+      <td
+        [ngClass]="{
+          green: loan.state.name === 'LOANED',
+          yellow:
+            loan.state.name === 'REQUESTED' ||
+            loan.state.name === 'RETURN_REQUESTED',
+          red: loan.state.name === 'REFUSED',
+          grey: loan.state.name === 'RETURNED'
+        }"
+      >
         {{ loan.state.display_name_french }}
       </td>
-      <td>{{ loan.loan_date | date:'dd/MM/yyyy' }}</td>
-      <td [ngClass]="{'red': isReturnDateExceeded(loan.return_date)}">{{ loan.return_date | date:'dd/MM/yyyy' }}</td>
+      <td>{{ loan.loan_date | date : "dd/MM/yyyy" }}</td>
+      <td [ngClass]="{ red: isReturnDateExceeded(loan.return_date) }">
+        {{ loan.return_date | date : "dd/MM/yyyy" }}
+      </td>
       <td>{{ loan.equipment.code }}</td>
       <td>{{ loan.equipment.reference.name }}</td>
-      <td>{{ loan.organization?.name || '-' }}</td>
+      <td>{{ loan.organization?.name || "-" }}</td>
       <td>{{ loan.room.name }}</td>
       <td>{{ loan.equipment.stockage_room.name }}</td>
       <td>
         <div
           class="button red"
-          [ngClass]="{'disabled': loan.state.name !== 'LOANED'}"
-          (click)="loan.state.name === 'LOANED' && onLoanReturnRequest(loan.equipment.code)">
+          [ngClass]="{ disabled: loan.state.name !== 'LOANED' }"
+          (click)="
+            loan.state.name === 'LOANED' &&
+              onLoanReturnRequest(loan.equipment.code)
+          "
+        >
           Demander un retour
         </div>
-      </td>      
+      </td>
     </tr>
   </tbody>
 </table>
