--- a/site/src/app/components/partials/types-dropdown/types-dropdown.component.html
+++ b/site/src/app/components/partials/types-dropdown/types-dropdown.component.html
@@ -1,8 +1,13 @@
-<div class="dropdown container">
-  <label for="typesDropdown">Type :</label>
-  <select id="typesDropdown" class="dropdown" (change)="onTypeChange($any($event.target).value)">
-    <option *ngFor="let type of types" [value]="type.name">
-      {{ type.name }}
-    </option>
-  </select>
-</div>
+<form class="form">
+  <div>
+    <label for="typesDropdown">Type</label>
+    <select
+      id="typesDropdown"
+      (change)="onTypeChange($any($event.target).value)"
+    >
+      <option *ngFor="let type of types" [value]="type.name">
+        {{ type.name }}
+      </option>
+    </select>
+  </div>
+</form>
