--- a/site/src/app/components/pages/account/account.component.html
+++ b/site/src/app/components/pages/account/account.component.html
@@ -1,4 +1,5 @@
-<div class="page">
-    <app-account-form></app-account-form>
-  </div>
+<div class="page account-page">
+  <app-account-form></app-account-form>
+  <button class="logout-button" (click)="logout()">Déconnexion</button>
+</div>
   
