--- a/site/src/app/components/pages/administration/home/home.component.html
+++ b/site/src/app/components/pages/administration/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="page">
-    <app-home-tiles></app-home-tiles>
+    <app-administration-home-tiles></app-administration-home-tiles>
 </div>
   
