/administration/loaned/list page

--- a/site/src/app/components/partials/administration-home-tiles/administration-home-tiles.component.html
+++ b/site/src/app/components/partials/administration-home-tiles/administration-home-tiles.component.html
@@ -1,13 +1,13 @@
 <div class="home-tiles">
   <div>
-    <div class="blue" (click)="navigateTo('/loanable/list')">
-      <h1>Réserver du matériel</h1>
+    <div class="blue" (click)="navigateTo('/administration/loaned/list')">
+      <h1>Gérer les emprunts</h1>
     </div>
-    <div class="yellow" (click)="navigateTo('/loaned/list')">
-      <h1>Consulter le matériel réservé</h1>
+    <div class="yellow" (click)="navigateTo('/administration/equipment/list')">
+      <h1>Gérer les équipements</h1>
     </div>
-    <div class="green" (click)="navigateTo('/account')">
-      <h1>Gérer mon compte</h1>
+    <div class="green" (click)="navigateTo('/administration/account/list')">
+      <h1>Gérer les utilisateurs</h1>
     </div>
   </div>
 </div>
