--- a/site/src/app/components/pages/administration/loaned/list/list.component.html
+++ b/site/src/app/components/pages/administration/loaned/list/list.component.html
@@ -1,3 +1,3 @@
 <div class="page">
-    <app-loaned-list></app-loaned-list>
+    <app-administration-loaned-list></app-administration-loaned-list>
 </div>
