--- a/site/src/app/components/partials/administration-loaned-list/administration-loaned-list.component.html
+++ b/site/src/app/components/partials/administration-loaned-list/administration-loaned-list.component.html
@@ -40,8 +40,7 @@
           class="button red"
           [ngClass]="{ disabled: loan.state.name !== 'LOANED' }"
           (click)="
-            loan.state.name === 'LOANED' &&
-              onLoanReturnRequest(loan.equipment.code)
+            loan.state.name === 'LOANED'
           "
         >
           Demander un retour
