--- a/site/src/app/components/partials/user-home-tiles/user-home-tiles.component.html
+++ b/site/src/app/components/partials/user-home-tiles/user-home-tiles.component.html
@@ -3,7 +3,7 @@
     <div class="blue" (click)="navigateTo('/loanable/list')">
       <h1>Réserver du matériel</h1>
     </div>
-    <div class="yellow" (click)="navigateTo('/loaned/list')">
+    <div class="yellow" (click)="navigateTo('/user/loaned/list')">
       <h1>Consulter le matériel réservé</h1>
     </div>
     <div class="green" (click)="navigateTo('/account')">
