--- a/site/src/app/components/partials/loanable-list/loanable-list.component.html
+++ b/site/src/app/components/partials/loanable-list/loanable-list.component.html
@@ -18,7 +18,7 @@
         }}
       </td>
       <td>{{ availableEquipment.stockage_room.name }}</td>
-      <td>
+      <td class="actions">
         <div
           class="button green"
           (click)="
