--- a/site/src/styles/table.css
+++ b/site/src/styles/table.css
@@ -5,7 +5,7 @@
 
 .table th, .table td {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: .5em;
 }
 
 .table th {
@@ -13,6 +13,12 @@
   padding-bottom: 12px;
   text-align: left;
   background-color: #f2f2f2;
+}
+
+.actions {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
 }
 
 .button {
