--- a/site/src/app/components/partials/administration-home-tiles/administration-home-tiles.component.html
+++ b/site/src/app/components/partials/administration-home-tiles/administration-home-tiles.component.html
@@ -9,5 +9,8 @@
     <div class="green" (click)="navigateTo('/administration/account/list')">
       <h1>Gérer les utilisateurs</h1>
     </div>
+    <div class="grey" (click)="navigateTo('/account')">
+      <h1>Gérer mon compte</h1>
+    </div>
   </div>
 </div>
