--- a/site/src/styles/styles.css
+++ b/site/src/styles/styles.css
@@ -1,5 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+:root {
+  --blue: #37b2ff;
+  --blue-hover: #2f9ed6;
+  --green: #50d7b3;
+  --green-hover: #3dbf9b;
+  --yellow: #e6cb31;
+  --yellow-hover: #d9c22b;
+  --orange: #ff8c00;
+  --orange-hover: #e67a00;
+  --red: #ff4d4d;
+  --red-hover: #e63a3a;
+  --grey: #b0b0b0;
+  --grey-hover: #a0a0a0;
+}
+
 * {
   font: unset;
 }
@@ -11,49 +26,49 @@ body {
 }
 
 .blue {
-  background-color: #37b2ff;
+  background-color: var(--blue);
 }
 
 .blue:hover {
-  background-color: #2f9ed6;
+  background-color: var(--blue-hover);
 }
 
 .green {
-  background-color: #50d7b3;
+  background-color: var(--green);
 }
 
 .green:hover {
-  background-color: #3dbf9b;
+  background-color: var(--green-hover);
 }
 
 .yellow {
-  background-color: #e6cb31;
+  background-color: var(--yellow);
 }
 
 .yellow:hover {
-  background-color: #d9c22b;
+  background-color: var(--yellow-hover);
 }
 
 .orange {
-  background-color: #ff8c00;
+  background-color: var(--orange);
 }
 
 .orange:hover {
-  background-color: #e67a00;
+  background-color: var(--orange-hover);
 }
 
 .red {
-  background-color: #ff4d4d;
+  background-color: var(--red);
 }
 
 .red:hover {
-  background-color: #e63a3a;
+  background-color: var(--red-hover);
 }
 
 .grey {
-  background-color: #b0b0b0;
+  background-color: var(--grey);
 }
 
 .grey:hover {
-  background-color: #a0a0a0;
+  background-color: var(--grey-hover);
 }
