--- a/site/src/app/components/partials/user-home-tiles/user-home-tiles.component.html
+++ b/site/src/app/components/partials/user-home-tiles/user-home-tiles.component.html
@@ -1,6 +1,6 @@
 <div class="home-tiles">
   <div>
-    <div class="blue" (click)="navigateTo('/loanable/list')">
+    <div class="blue" (click)="navigateTo('/user/loanable/list')">
       <h1>Réserver du matériel</h1>
     </div>
     <div class="yellow" (click)="navigateTo('/user/loaned/list')">
