--- a/site/src/app/components/pages/user/loan/request/request.component.html
+++ b/site/src/app/components/pages/user/loan/request/request.component.html
@@ -1,3 +1,3 @@
 <div class="page">
-    <app-loan-request-form></app-loan-request-form>
+    <app-user-loan-request-form></app-user-loan-request-form>
 </div>
