--- a/site/src/app/components/partials/login-form/login-form.component.html
+++ b/site/src/app/components/partials/login-form/login-form.component.html
@@ -43,5 +43,5 @@
     </div>
   </div>
 
-  <button type="submit">Connexion</button>
+  <button type="submit" class="blue">Connexion</button>
 </form>
