--- a/site/src/app/components/partials/user-home-tiles/user-home-tiles.component.html
+++ b/site/src/app/components/partials/user-home-tiles/user-home-tiles.component.html
@@ -6,7 +6,7 @@
     <div class="yellow" (click)="navigateTo('/user/loaned/list')">
       <h1>Consulter le matériel réservé</h1>
     </div>
-    <div class="green" (click)="navigateTo('/account')">
+    <div class="grey" (click)="navigateTo('/account')">
       <h1>Gérer mon compte</h1>
     </div>
   </div>
