--- a/site/src/styles/form.css
+++ b/site/src/styles/form.css
@@ -2,7 +2,7 @@
   max-width: 400px;
   margin: auto;
   padding: 2em;
-  background: #ddf2ff;
+  background: var(--light-blue);
   border-radius: 30px;
   display: flex;
   flex-direction: column;
@@ -15,7 +15,7 @@
 
 .form > div > input, .form > div > select {
   background-color: white;
-  border: 1px solid #ccc;
+  border: 1px solid var(--grey);
   padding: .5em;
   font-size: 1em;
   border-radius: 5px;
@@ -29,17 +29,11 @@
 
 .form > button {
   padding: 0.7em;
-  color: white;
-  background-color: #007BFF;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1em;
   width: 100%;
-}
-
-.form > button:hover {
-  background-color: #0056b3;
 }
 
 .form > div > .invalid-indicator {
