--- a/site/src/styles/styles.css
+++ b/site/src/styles/styles.css
@@ -2,8 +2,8 @@
 
 :root {
   --light-blue: #ddf2ff;
-  --blue: #37b2ff;
-  --blue-hover: #2f9ed6;
+  --blue: #00b7d7;
+  --blue-hover: #00a3c2;
   --green: #50d7b3;
   --green-hover: #3dbf9b;
   --yellow: #e6cb31;
